--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -1,12 +1,3 @@
-/*
-
-Ramayana CSS Template
-
-https://templatemo.com/tm-529-ramayana
-
-*/
-
-
 @import url(fontawesome.css);
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700");
 
@@ -59,7 +50,7 @@ button {
 .primary-button a:hover,
 button:hover {
 	color: #fff;
-	background-color: rgba(83,91,160,1);
+	background-color: #24252d;
 }
 
 section#search {
@@ -1092,7 +1083,7 @@ section.buttons .container-fluid {
 }
 
 #header .logo {
-    text-align: right;
+    text-align: center;
     display: inline-block;	
     width: 100%;
     height: 100px;
@@ -1105,6 +1096,13 @@ section.buttons .container-fluid {
 	color: #fff;
 	font-weight: 700;
 	margin-right: 100px;
+}
+
+.alogin{
+    color: #fff;
+}
+.alogin:hover{
+    color: #FC3;
 }
 
 
