[GymHub] Ajuste usuarios.

--- a/gymhub/src/main/resources/templates/cadastro.html
+++ b/gymhub/src/main/resources/templates/cadastro.html
@@ -47,7 +47,7 @@
                       <h2>Cadastro</h2>
                     </div>
 
-                    <form id="form-login" th:action="@{/salvar}" method="post" name="form-login">
+                    <form id="form-login" th:action="@{/salvarUsuario}" method="post" name="form-login">
                       <div class="row">
 
                         <div class="col-md-12">
