--- a/gymhub/src/main/resources/templates/simple_page.html
+++ b/gymhub/src/main/resources/templates/simple_page.html
@@ -181,7 +181,7 @@
               <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="planos">Planos</a></li>
-                <li><a href="produtos">Produtos</a></li>
+                <li><a href="/mostraProdutos">Produtos</a></li>
                 <li><a href="simple_page">Simple Page</a></li>
                 <li><a href="shortcodes">Shortcodes</a></li>
                 <li>
