--- a/gymhub/src/main/resources/templates/assets/css/templatemo-style.css
+++ b/gymhub/src/main/resources/templates/assets/css/templatemo-style.css
@@ -159,7 +159,7 @@ section {
 
 .services .service-item {
 	margin-bottom: 3px;
-	background-color: #eaebef;
+	background-color: #151515;
 	padding: 50px;
 	text-align: center;
 	transition: all 0.5s;
