--- a/gymhub/src/main/resources/templates/produtos.html
+++ b/gymhub/src/main/resources/templates/produtos.html
@@ -48,9 +48,9 @@
                   <div class="row">
                     <div class="col-md-6" th:each="produtoVitrine : ${produtosVitrine}">
                       <div class="service-item first-item">
-                        <div class="icon"></div>
-                        <h4 th:text="${produtoVitrine.nomeproduto}"></h4>
-                        <p th:text="${produtoVitrine.descricao}"></p>
+                        <img th:src="${produtoVitrine.imagemproduto}">
+                        <h4 th:text="${produtoVitrine.nomeproduto}" style="padding-top: 20px;color: #fff;"></h4>
+                        <p th:text="${produtoVitrine.descricao}" style="color: #fff;"></p>
                       </div>
                     </div>                                    
                   </div>
