[GymHub] Ajustes menu.

--- a/gymhub/src/main/resources/templates/shortcodes.html
+++ b/gymhub/src/main/resources/templates/shortcodes.html
@@ -33,7 +33,7 @@
             <!-- Header -->
             <header id="header">
               <div class="logo">
-                <a href="index">GymHub</a>
+                <a href="/">GymHub</a>
               </div>
             </header>
 
@@ -332,29 +332,21 @@
             </section>
               
             <!-- Menu -->
-           <nav id="menu">
+            <nav id="menu">
               <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="planos">Planos</a></li>
-                <li><a href="/mostraProdutos">Produtos</a></li>
+                <li><a href="/mostraPlanos">Planos</a></li>
+                <li><a href="/mostraProdutos">Produtos</a></li>            
                 <li><a href="simple_page">Simple Page</a></li>
                 <li><a href="shortcodes">Shortcodes</a></li>
                 <li>
-                  <span class="opener">Dropdown One</span>
+                  <span class="opener">Cadastros</span>
                   <ul>
-                    <li><a href="#">First Sub Menu</a></li>
-                    <li><a href="#">Second Sub Menu</a></li>
-                    <li><a href="#">Third Sub Menu</a></li>
+                    <li><a href="/planosCadastro">Planos</a></li>
+                    <li><a href="/produtosVitrine">Produtos</a></li>
+                    <li><a href="/usuarios">Usuários</a></li>
                   </ul>
-                </li>
-                <li>
-                  <span class="opener">Dropdown Two</span>
-                  <ul>
-                    <li><a href="#">Sub Menu #1</a></li>
-                    <li><a href="#">Sub Menu #2</a></li>
-                    <li><a href="#">Sub Menu #3</a></li>
-                  </ul>
-                </li>                
+                </li>                             
               </ul>
             </nav>
 
