--- a/gymhub/src/main/resources/templates/cadastro.html
+++ b/gymhub/src/main/resources/templates/cadastro.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-    <title>GymHub - Cadastro</title>
+    <title>GymHub - Cadastro de Usuários</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
             <!-- Header -->
             <header id="header">
               <div class="logo">
-                <a href="index">GymHub</a>
+                <a href="/">GymHub</a>
               </div>
             </header>  
             
@@ -44,7 +44,7 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="section-heading">
-                      <h2>Cadastro</h2>
+                      <h2>Cadastro de Usuários</h2>
                     </div>
 
                     <form id="form-login" th:action="@{/salvarUsuario}" method="post" name="form-login">
@@ -75,7 +75,7 @@
                         
                         <div class="col-md-6 col-sm-6">
                           <div class="circle-item">
-                            <input name="cliente" type="radio" id="demo-small" checked>
+                            <input name="demo-priority" type="radio" id="demo-small">
                             <label for="demo-small">Cliente</label>
                           </div>
                         </div>
@@ -116,26 +116,18 @@
             <nav id="menu">
               <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="planos">Planos</a></li>
-                <li><a href="/mostraProdutos">Produtos</a></li>        
+                <li><a href="/mostraPlanos">Planos</a></li>
+                <li><a href="/mostraProdutos">Produtos</a></li>            
                 <li><a href="simple_page">Simple Page</a></li>
                 <li><a href="shortcodes">Shortcodes</a></li>
                 <li>
-                  <span class="opener">Dropdown One</span>
+                  <span class="opener">Cadastros</span>
                   <ul>
-                    <li><a href="#">First Sub Menu</a></li>
-                    <li><a href="#">Second Sub Menu</a></li>
-                    <li><a href="#">Third Sub Menu</a></li>
+                    <li><a href="/planosCadastro">Planos</a></li>
+                    <li><a href="/produtosVitrine">Produtos</a></li>
+                    <li><a href="/usuarios">Usuários</a></li>
                   </ul>
-                </li>
-                <li>
-                  <span class="opener">Dropdown Two</span>
-                  <ul>
-                    <li><a href="#">Sub Menu #1</a></li>
-                    <li><a href="#">Sub Menu #2</a></li>
-                    <li><a href="#">Sub Menu #3</a></li>
-                  </ul>
-                </li>                
+                </li>                             
               </ul>
             </nav>
 
