[GymHub] Ajuste menu.

--- a/gymhub/src/main/resources/templates/simple_page.html
+++ b/gymhub/src/main/resources/templates/simple_page.html
@@ -187,6 +187,7 @@
                 <li>
                   <span class="opener">Cadastros</span>
                   <ul>
+                    <li><a href="/academiasCadastro">Academias</a></li>
                     <li><a href="/planosCadastro">Planos</a></li>
                     <li><a href="/produtosVitrine">Produtos</a></li>
                     <li><a href="/usuarios">Usuários</a></li>
