--- a/gymhub/src/main/resources/templates/cadastroPlano.html
+++ b/gymhub/src/main/resources/templates/cadastroPlano.html
@@ -112,6 +112,7 @@
                 <li>
                   <span class="opener">Cadastros</span>
                   <ul>
+                    <li><a href="/academiasCadastro">Academias</a></li>
                     <li><a href="/planosCadastro">Planos</a></li>
                     <li><a href="/produtosVitrine">Produtos</a></li>
                     <li><a href="/usuarios">Usuários</a></li>
