--- a/gymhub/src/main/resources/templates/planos.html
+++ b/gymhub/src/main/resources/templates/planos.html
@@ -83,6 +83,7 @@
             <nav id="menu">
               <ul>
                 <li><a href="/">Home</a></li>
+                <li><a href="/mostraAcademias">Academias</a></li>
                 <li><a href="/mostraPlanos">Planos</a></li>
                 <li><a href="/mostraProdutos">Produtos</a></li>            
                 <li><a href="simple_page">Simple Page</a></li>
