--- a/gymhub/src/main/resources/static/assets/css/templatemo-style.css
+++ b/gymhub/src/main/resources/static/assets/css/templatemo-style.css
@@ -102,7 +102,7 @@ section {
 	padding-right: 0px;
 }
 .main-banner .banner-content {
-	background-image: url(../images/main-banner.jpg);
+	background-image: url(../images/banner-principal.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
