[GymHub] Correção nos Planos.

--- a/gymhub/src/main/resources/templates/cadastroPlano.html
+++ b/gymhub/src/main/resources/templates/cadastroPlano.html
@@ -70,7 +70,7 @@
 
                         <div class="col-md-12">
                             <fieldset>
-                              <input name="valorproduto" type="text" class="form-control" id="valorproduto" placeholder="Valor do Produto" required="">
+                              <input name="valor" type="text" class="form-control" id="valor" placeholder="Valor do Plano" required="">
                             </fieldset>
                         </div>
                         
@@ -127,7 +127,7 @@
             <!-- Footer -->
             <footer id="footer">
               <p class="copyright">Copyright &copy; 2020 GymHub
-              <br>Designed by <a rel="nofollow" href="#">Template Mo</a></p>
+              
             </footer>
 
           </div>
